fix inline-block, overflow, title

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,8 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .add-menu {
@@ -343,11 +345,11 @@ body {
 }
 
 .main-menu--footer .main-menu__item,
-.main-menu--footer .main-menu__item:last-child  {
+.main-menu--footer .main-menu__item:nth-child(3) {
   margin: 0 18px;
 }
 
-.main-menu__item:last-child {
+.main-menu__item:nth-child(3) {
   margin-left: auto;
   margin-right: 0;
 }
@@ -406,6 +408,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .submenu__list {
@@ -639,7 +643,7 @@ body {
 }
 
 .slide__text::before {
-  content: attr(number);
+  content: attr(data-number);
   position: absolute;
   top: -13px;
   right: 50px;
@@ -693,6 +697,7 @@ body {
 
 .slide__info-item {
   display: inline-block;
+  vertical-align: baseline;
   min-width: 150px;
   margin-right: 10px;
 }
@@ -1512,6 +1517,7 @@ catalog page
 
 .range-runner__inputs-line *{
   display: inline-block;
+  vertical-align: bottom;
   font-size: 14px;
   line-height: 23px;
   font-weight: lighter;
